--- a/DemoExamPreparing/DemoExamPreparing.csproj
+++ b/DemoExamPreparing/DemoExamPreparing.csproj
@@ -63,6 +63,36 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MarathonSkills.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MarathonSkills.Designer.cs">
+      <DependentUpon>MarathonSkills.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MS_Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_Login.Designer.cs">
+      <DependentUpon>MS_Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MS_LoginRole.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_LoginRole.Designer.cs">
+      <DependentUpon>MS_LoginRole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MS_RegisterAsRunner.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_RegisterAsRunner.Designer.cs">
+      <DependentUpon>MS_RegisterAsRunner.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MS_RegisterAsRunnerData.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_RegisterAsRunnerData.Designer.cs">
+      <DependentUpon>MS_RegisterAsRunnerData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrationForm.cs">
@@ -77,6 +107,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MarathonSkills.resx">
+      <DependentUpon>MarathonSkills.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MS_Login.resx">
+      <DependentUpon>MS_Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MS_LoginRole.resx">
+      <DependentUpon>MS_LoginRole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MS_RegisterAsRunner.resx">
+      <DependentUpon>MS_RegisterAsRunner.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MS_RegisterAsRunnerData.resx">
+      <DependentUpon>MS_RegisterAsRunnerData.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
