--- a/DemoExamPreparing/DemoExamPreparing.csproj
+++ b/DemoExamPreparing/DemoExamPreparing.csproj
@@ -57,6 +57,12 @@
     <Compile Include="MS_AdminMenu.Designer.cs">
       <DependentUpon>MS_AdminMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="MS_BMICalculator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_BMICalculator.Designer.cs">
+      <DependentUpon>MS_BMICalculator.cs</DependentUpon>
+    </Compile>
     <Compile Include="MS_CharitiesList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,6 +196,12 @@
     <Compile Include="MS_SponsorConfirmation.Designer.cs">
       <DependentUpon>MS_SponsorConfirmation.cs</DependentUpon>
     </Compile>
+    <Compile Include="MS_SponsorsOverview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_SponsorsOverview.Designer.cs">
+      <DependentUpon>MS_SponsorsOverview.cs</DependentUpon>
+    </Compile>
     <Compile Include="MS_SupportARuuner.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -202,6 +214,36 @@
     <Compile Include="MS_MySponsors.Designer.cs">
       <DependentUpon>MS_MySponsors.cs</DependentUpon>
     </Compile>
+    <Compile Include="MS_UserAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_UserAdd.Designer.cs">
+      <DependentUpon>MS_UserAdd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MS_UserEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_UserEdit.Designer.cs">
+      <DependentUpon>MS_UserEdit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MS_UserManagement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_UserManagement.Designer.cs">
+      <DependentUpon>MS_UserManagement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MS_VolunteerManagement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_VolunteerManagement.Designer.cs">
+      <DependentUpon>MS_VolunteerManagement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MS_VolunteersImport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MS_VolunteersImport.Designer.cs">
+      <DependentUpon>MS_VolunteersImport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrationForm.cs">
@@ -213,6 +255,9 @@
     <Compile Include="SettingsManager.cs" />
     <EmbeddedResource Include="MS_AdminMenu.resx">
       <DependentUpon>MS_AdminMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MS_BMICalculator.resx">
+      <DependentUpon>MS_BMICalculator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MS_CharitiesList.resx">
       <DependentUpon>MS_CharitiesList.cs</DependentUpon>
@@ -280,11 +325,29 @@
     <EmbeddedResource Include="MS_SponsorConfirmation.resx">
       <DependentUpon>MS_SponsorConfirmation.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MS_SponsorsOverview.resx">
+      <DependentUpon>MS_SponsorsOverview.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MS_SupportARuuner.resx">
       <DependentUpon>MS_SupportARuuner.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MS_MySponsors.resx">
       <DependentUpon>MS_MySponsors.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MS_UserAdd.resx">
+      <DependentUpon>MS_UserAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MS_UserEdit.resx">
+      <DependentUpon>MS_UserEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MS_UserManagement.resx">
+      <DependentUpon>MS_UserManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MS_VolunteerManagement.resx">
+      <DependentUpon>MS_VolunteerManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MS_VolunteersImport.resx">
+      <DependentUpon>MS_VolunteersImport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -312,6 +375,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BMIFemaleIcon.png" />
+    <Content Include="BMIHealthyIcon.png" />
+    <Content Include="BMIMaleIcon.png" />
+    <Content Include="BMIObeseIcon.png" />
+    <Content Include="BMIOverweightIcon.png" />
+    <Content Include="BMIResultScale.png" />
+    <Content Include="BMIUnderweightIcon.png" />
     <Content Include="marathon-skills-2016-marathon-map.jpg" />
     <Content Include="settings.xml" />
   </ItemGroup>
